# soundit

./: .gitignore  README.md  README.rst  hatch.toml  index.html  pyproject.toml  searchindex.js  setup.py  soundit.py
.github/workflows/: docs.yaml
_generated/CHANGELOG/: index.html
_generated/api/soundit/: index.html
_modules/: index.html
_modules/soundit/: index.html
_sources/: changelog.rst.txt
_sources/api/: index.rst.txt
_sources/api/soundit/: index.rst.txt
_static/: documentation_options.js
api/: index.html
api/soundit/: index.html
changelog/: index.html
docs/: api.rst  changelog.rst  conf.py  gitchangelog_conf.py  index.rst
docs/_extensions/: autoapi_literal_annotations.py  autoapi_meta_fields.py  better_subsection.py  clean_autoapi.py  program_include.py  rebuild_when.py  remove_meta_fields.py  static_refresh.py
docs/_static/: custom.css
docs/_templates/: layout.html  page.html
docs/_templates/autoapi/: index.rst
docs/_templates/autoapi/python/: data.rst  module.rst
docs/_templates/autosummary/: module.rst
docs/_templates/gitchangelog/: CHANGELOG.rst
docs/_templates/reredirects/: template.html
examples/: music_digitized.py  music_megalovania.py
genindex/: index.html
py-modindex/: index.html
search/: index.html
src/: soundit.py
