[project]
name = "soundit"
description = "Make audio"
authors = [
	{ name = "George Zhang", email = "geetransit@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.7"
dependencies = [
	"typing-extensions>=4.0.0;python_version<'3.10'",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.org/project/soundit/"
Repository = "https://github.com/GeeTransit/soundit"

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
    "flake8>=4.0.0",
    "pyproject-flake8>=0.0.1a2",
    "mypy>=0.901",
]

[tool.hatch.envs.lint.scripts]
# TODO: Change to flake8 when it supports pyproject.toml
style = "pflake8 soundit.py"
typing = "mypy --install-types --non-interactive soundit.py"
all = ["style", "typing"]

[tool.hatch.envs.test.scripts]
doctest = "python -m doctest soundit.py"
all = ["doctest"]

[tool.hatch.envs.test-matrix]
template = "test"
matrix = [ { python = ["37", "38", "39", "310"] } ]

[tool.flake8]
extend-ignore = "E302, E305, E306"

[tool.mypy]
show_error_codes = true

[build-system]
requires = ["hatchling>=0.15.0", "hatch-vcs"]
build-backend = "hatchling.build"
